src/app/pages/view-product-details/view-product-details.component.css
img {
    width: 100%;
}

.input-box {
    border-style: none;
    width: 40px;
    border-bottom: var(--grey-border);
    border-top: var(--grey-border);
    text-align: center;
}

.btn {
    color: var(--dark);
}

.btn-icon {
    border: var(--grey-border);
    border-radius: var(--default-border-radius);

    color: var(--dark);
}

.btn-icon:hover .btn-icon:focus {
    border: var(--grey-border);
    border-radius: var(--default-border-radius);

    color: var(--darker);
}

.active {
    background-color: var(--dark);
    color: var(--white);
    border-color: var(--dark);
}

.cart-btn {
    border-color: var(--primary-color);
    color: var(--white);
    background-color: var(--primary-color);
}

.selector {
    border-radius: var(--default-border-radius);
}

.selector-option {
    width: var(--width-large);
    
    margin: var(--s-medium);

    border: var(--grey-border);
    border-radius: var(--default-border-radius);
}

.container {
    margin: var(--s-medium);
}

.product-details {
    padding: var(--s-medium)
}

.price-label {
    font-weight: var(--bold);
    font-size: var(--large);
}

@media only screen and (max-width: 768px) {
    .product-details {
        padding: var(--s-medium)
    }

}

